--- a/style.css
+++ b/style.css
@@ -1,17 +1,9 @@
-@font-face {
-    font-family: 'NorseBold'; 
-    src: url('path-to-your-font/customfont.woff2') format('woff2'),
-         url('path-to-your-font/customfont.woff') format('woff');
-    
-  }
-
-
 body {
-    font-family: 'NorseBold', sans-serif;
     margin: 0;
     padding: 0;
     height: 100%;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container {
@@ -30,29 +22,58 @@ body {
     
 }
 
+.logo {
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: relative;
+    top: 30vh;
+    gap: 1vw;
+    padding: 20px 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .right-container {
     display: flex;
     flex-direction: column;
     height: 100vh;
     width: 100%;
+    color: rgb(185, 185, 185)
     
 }
 
 .up-container {
-    background-color: rgb(232, 235, 238);
-    padding: 250px 64px 64px 64px;
+    background-color: rgb(0, 0, 0);
+    padding: 128px 64px 64px 64px;
 }
+
 .up {
-    max-width: 925px;
-    font-size: 20px;
+    max-width: 690px;
+    font-size: 16px;
+    
     
 }
 
+.neoff {
+    color: white;
+    font-weight: bold;
+}
 h2 {
     font-weight: 500;
 }
 
 img {
-    width: 150px;
+    width: 175px;
     height: auto;
+}
+
+.mid {
+    background-color: black;
+    padding: 128px 64px 64px 64px;
+}
+
+p {
+    font-size: 24px;
 }
