--- a/style.css
+++ b/style.css
@@ -36,21 +36,21 @@ body {
 }
 
 .right-container {
+    background-color: black;
     display: flex;
     flex-direction: column;
     height: 100vh;
     width: 100%;
-    color: rgb(185, 185, 185)
-    
+    color: rgb(185, 185, 185) 
 }
 
 .up-container {
     background-color: rgb(0, 0, 0);
-    padding: 128px 64px 64px 64px;
+    padding: 64px 64px 64px 0px;
 }
 
 .up {
-    max-width: 690px;
+    max-width: 760px;
     font-size: 16px;
     
     
@@ -76,4 +76,50 @@ img {
 
 p {
     font-size: 24px;
+}
+
+.form {
+    background-color: rgb(6,6,6);
+    box-shadow: 0 10px 20px -2px rgb(22,22,22);
+    display: flex;
+    flex-flow: row wrap;
+    gap: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.right {
+    padding-left: 3vw;
+}
+
+.form-title {
+    width: 100%;
+    font-size: 1.6rem;
+    font-weight: 500;
+}
+
+.input {
+    display: flex;
+    flex-flow: column wrap;
+    font-size: 0.8rem;
+    width: 40%;
+    text-transform: uppercase;
+    opacity: 50%;
+}
+
+button {
+    color: #e6007e;
+    font-size: 1.2em;
+    background-color: rgba(0, 0, 0, 0);
+    font-weight: 700;
+    border: 2px solid #e6007e;
+    border-radius: 5px;
+    padding: 10px 40px;
+    margin: 40px 0;
+}
+
+a {
+    color: #e6007e;
+    text-decoration: none;
+    font-weight: 700;
 }
